--- a/AutomobileRepairShop/Views/Shared/Appointments.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Appointments.cshtml
@@ -33,6 +33,12 @@
                         <input asp-for="Car.ChassisCode" type="code" for="code" class="form-control form-control-lg" required/>
                      </div>
 
+                     <div class="form-outline mb-4">
+                        <label class="form-label" for="kilometers">Kilometers:</label>
+                        <input asp-for="Car.Kilometers" type="kilometers" for="kilometers" class="form-control form-control-lg" required/>
+                     </div>
+
+
                       <div class="pt-1 mb-4">
                             <button class="btn btn-info btn-lg btn-block" type="submit">Reservation</button>
                       </div>
