History work in progress

--- a/AutomobileRepairShop/Views/Shared/_Layout.cshtml
+++ b/AutomobileRepairShop/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
                                 else 
                                 {
                                     <li class="nav-item"><a id="appointment" class="nav-link text-darK" asp-area="" asp-controller="Home" asp-action="Appointments">Make an appointment</a></li>
+                                    <li class="nav-item"><a id="history" class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="History">View appointment history</a></li>
                                 }
                             }
                     </ul>
