--- a/AutomobileRepairShop/Views/Shared/Appointments.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Appointments.cshtml
@@ -14,6 +14,7 @@
                     <h4 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Select the date:</h4>
                     <!-- Date -->
                     <div class="form-outline mb-4">
+                        @ViewBag.noa
                         <input asp-for="Appointment.Date" id="date_picker" type="date" for="date" class="form-control form-control-lg" required />
                     </div>
 
