--- a/AutomobileRepairShop/Views/Shared/Appointments.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Appointments.cshtml
@@ -32,6 +32,7 @@
 
                     <div class="form-outline mb-4">
                         <label class="form-label" for="code">Chassis Code:</label>
+                        <br>@ViewBag.car
                         <input asp-for="Car.ChassisCode" type="code" for="code" class="form-control form-control-lg" required />
                     </div>
 
